2005-04-29  Jonathan Pryor  <jonpryor@vt.edu>

	* StdioFileStreamTest.cs: Add FilePosition tests; remove `var = var` 
	  lines (added to remove warnings, but now produces other warnings).

2005-04-28  Jonathan Pryor  <jonpryor@vt.edu>

	* StdlibTest.cs: Calling a P/Invoke function from signal-handler context is
	  *bad*, which is why I've had so much trouble getting consistent results
	  getting this test to work -- it was broken by design.  Instead, just save
	  the signum passed to the handler (which is reentrant safe), and compare
	  the saved value with the expected value after the signal handler returns.
	  This should always work.  Use SIGURG instead of SIGUSR1 because SIGURG is
	  ignored by default (allowing us to call it without adding your own
	  handler), unlike SIGUSR1 which terminates the program.

2005-03-28  Jonathan Pryor  <jonpryor@vt.edu>

	* StdioFileStreamTest.cs: Added; based on MonoTests.System.IO.FileStreamTest.

2005-02-09  Jonathan Pryor  <jonpryor@vt.edu>

	* StdlibTest.cs: Signal is currently ignored, but add Category(NotDotNet) so
	  it isn't run even when we fix it.  .NET 1.1 doesn't marshal delegates
	  properly for signal (different calling conventions).
	  Add Category(NotDotNet) for Snprintf(), as MSVCRT.dll doesn't export it.
	* UnixGroupTest.cs, UnixUserTest.cs: Don't run these under .NET, as Windows
	  doesn't support the Syscall and related classes.

2005-02-01  Raja R Harinath  <rharinath@novell.com>

	* UnixUserTest.cs (UnixUserTest.ReentrantConstructors): Don't
	assume userid<->username mapping is a bijection.
	(UnixUserTest.NonReentrantSyscalls): Likewise.

2005-01-20  Jonathan Pryor  <jonpryor@vt.edu>

	* StdlibTest.cs: Ignore the signal(3) test, as it's currently hanging Mono.

2005-01-13  Jonathan Pryor  <jonpryor@vt.edu>

	* StdlibTest.cs: Added tests for signal(3) and snprintf(3).

2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* ChangeLog: Started.
	* UnixGroupTest.cs, UnixUserTest.cs: Added.
